--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <form class="">
           <p class="modal-headline">Chololate icecream</p>
           <div>
-            <picture>
+            <picture class="modal-window-picture">
               <source
                 srcset="
                   ./images/desk-modal-ingradients-pict-1-1x.png 1x,
